--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           context: .
           file: WebApplication1/Dockerfile
-          push: true
+          load: true
           tags: argocd-course-webapp:${{ github.sha }}
   promote-to-dev-environment:
     runs-on: ubuntu-latest
