--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,7 @@ jobs:
           context: .
           file: WebApplication1/Dockerfile
           push: true
-          tags: |
-              argocd-course-webapp:${{ github.sha }}
-              argocd-course-webapp:latest
+          tags: argocd-course-webapp:latest
   promote-to-dev-environment:
     runs-on: ubuntu-latest
     needs: docker-build-push
